--- a/docs/css/bootstrap-reboot.css
+++ b/docs/css/bootstrap-reboot.css
@@ -25,8 +25,8 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Tahoma, Geneva, sans-serif, Arial, sans-serif";
+  font-size: 1.5rem;
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
